[package]
name = "polkadot-rpc"
version = "0.8.23"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
