[package]
name = "polkadot-rpc"
version = "0.8.24"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"  }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"  }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"}
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"}
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"}
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"}
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
