[package]
name = "polkadot-service"
version = "0.8.24"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
consensus = { package = "polkadot-validation", path = "../validation", optional = true }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
westend-runtime = { path = "../runtime/westend" }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
codec = { package = "parity-scale-codec", version = "1.3.4" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }

[dev-dependencies]
polkadot-test-runtime-client = { path = "../runtime/test-runtime/client" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
env_logger = "0.7.0"

[features]
default = ["db", "full-node"]
db = ["service/db"]
runtime-benchmarks = ["polkadot-runtime/runtime-benchmarks", "kusama-runtime/runtime-benchmarks", "westend-runtime/runtime-benchmarks"]
full-node = ["consensus"]
