[package]
name = "polkadot-validation"
version = "0.8.23"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
consensus = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
futures = "0.3.4"
log = "0.4.8"
derive_more = "0.14.1"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
block-builder = { package = "sc-block-builder", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "seun-babe-manual-seal" }
