[package]
name = "polkadot-validation"
version = "0.8.24"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
consensus = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
futures = "0.3.4"
log = "0.4.8"
derive_more = "0.14.1"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
block-builder = { package = "sc-block-builder", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "sub-v.0.8.24.patch" }
