[package]
name = "polkadot-test-service"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4"
log = "0.4.8"
rand = "0.7.3"
tempfile = "3.1.0"

# Polkadot dependencies
polkadot-primitives = { path = "../../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-runtime-common = { path = "../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-test-runtime = { path = "../../runtime/test-runtime" }

# Substrate dependencies
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-informant = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "kiz-seun-test-runner" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "kiz-seun-test-runner" }
serde_json = "1.0"
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "kiz-seun-test-runner" }
tokio = { version = "0.2", features = ["macros"] }
